--- a/top3-series-favoritas/pag002.html
+++ b/top3-series-favoritas/pag002.html
@@ -65,7 +65,7 @@
 
             <div class="actor">
 
-              <img src="imagens/Gaten-Matarazzo.jpg" alt="ator Gaten Matarazzo">
+              <img src="imagens/gaten-matarazzo.jpg" alt="ator Gaten Matarazzo">
 
                 <div>                
                     <a href="https://www.instagram.com/gatenm123/" target="_blank" class="actor-name">Gaten Matarazzo</a>           
@@ -83,7 +83,7 @@
 
             <div class="actor">
 
-                <img src="imagens/Noah-Schnapp.jpg" alt="ator Noah Schnapp">
+                <img src="imagens/noah-schnapp.jpg" alt="ator Noah Schnapp">
     
                 <div>                   
                     <a href="https://www.instagram.com/noahschnapp/" target="_blank" class="actor-name">Noah Schnapp</a>                
