--- a/top3-series-favoritas/pag004.html
+++ b/top3-series-favoritas/pag004.html
@@ -84,7 +84,7 @@
 
             <div class="actor">
 
-                <img src="imagens/Eden-Epstein.jpg" alt="atriz Eden Epstein">
+                <img src="imagens/eden-epstein.jpg" alt="atriz Eden Epstein">
     
                 <div>                   
                     <a href="https://www.instagram.com/eden_epstein/" target="_blank" class="actor-name">Eden Epstein</a>                
